ppx_view/test/errors/or_pattern_vars_order.expected
File "or_pattern_vars_order.ml", line 3, characters 4-45:
Error: ppx_view: Branches of an or-pattern should define the same variables in the same order
